--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: default
     <h1>404</h1>
 
     <p><strong>Page not found :(</strong></p>
-    <p>But you found a Senior Java Developer! :)</p>
+    <p>But you found a Java Software Engineer! :)</p>
 </div>
